2006-04-12  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-util.c: Fix memory leak in 
    seahorse_util_write_data_to_text
    * libseahorse/seahorse-pgp-operation.c: Fix problem with invalid
    progress data coming from GPGME
    
2006-04-11  Nate Nielsen  <nielsen@memberwebs.com>

    * libcryptui/cryptui-key-chooser.c:
    * libcryptui/cryptui-key-list.c:
    * libcryptui/cryptui-test-ui.c: DBUS work. Bring libcryptui key chooser 
    on par with libseahorse key chooser. 
    
2006-04-11  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-pgp-key-op.c:
    * libseahorse/seahorse-pgp-key-op.h: Change seahorse_pgp_key_add_photo
    filename arg to const.

2006-04-10  Nate Nielsen  <nielsen@memberwebs.com>

    * HACKING: Added a section about indentation.
    
2006-04-09  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-pgp-key-op.c:
    * libseahorse/seahorse-pgp-key-op.h:
    * src/seahorse-generate-adv.c:
    * src/seahorse-generate-druid.c: Progress dialog while generating key.
    Patch from Jim Pharis. Bug #159083
    
2006-04-06  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-key-properties.c:
    * src/seahorse-pgp-private-key-properties.c: Fix regression with 
    expire date dialog. Patch from Jim Pharis. Bug #325239
    
2006-04-06  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse.desktop.in: Move launcher to Accessories
    
2006-04-05  Adam Schreiber  <sadam@clemson.edu>
    
    * libseahorse/seahorse-import.c:
    * libseahorse/seahorse-signatures.c: Fix notifications to use new 
    graphics.
    * src/seahorse-pgp-private-key-properties.glade:
    * src/seahorse-pgp-public-key-properties.glade: Put event boxes back
    around photo ids so that scrolling works.

2006-04-03  Adam Schreiber  <sadam@clemson.edu>

    * plugins/applet/seahorse-applet.c:
    * src/seahorse-key-manager.c: Remove unnecessary rendering of pixbufs
    for about dialogs.