@@ -4,6 +4,8 @@
     seahorse_util_write_data_to_text
     * libseahorse/seahorse-pgp-operation.c: Fix problem with invalid
     progress data coming from GPGME
+    * libseahorse/seahorse-passphrase.c: Don't grab keyboard when in 
+    debug mode. This gets in the way. 
     
 2006-04-11  Nate Nielsen  <nielsen@memberwebs.com>
 
